# iceberg-mcp-server

./: LICENSE  README.md  catalog.py  iceberg.py  main.py  pyproject.toml  server.json  sonar-project.properties
.github/workflows/: deliver.yml  integrate.yml
src/: iceberg.py
src/iceberg_mcp_server/: __init__.py  server.py  telemetry.py
src/iceberg_mcp_server/tools/: namespace.py  query.py  table.py
src/tools/: namespace.py  query.py  table.py  test_table.py
tests/tools/: test_namespace.py  test_query.py  test_table.py
tools/: namespaces.py  query.py  table.py  tables.py  test_tables.py
